plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.2.1'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'media.toloka'
version = '1.0.0'

tasks.withType(JavaCompile) {
	options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
}

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.telegram:telegrambots-springboot-longpolling-starter:7.10.0'
	implementation 'org.telegram:telegrambots-client:7.10.0'
	implementation 'org.telegram:telegrambots-abilities:7.10.0'
	implementation 'javax.mail:javax.mail-api:1.6.2';
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.1'
	implementation 'org.springframework:spring-context-support:6.1.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
	// https://mvnrepository.com/artifact/commons-io/commons-io
	implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
	// https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
	implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
	// https://mvnrepository.com/artifact/org.json/json
	implementation group: 'org.json', name: 'json', version: '20090211'
	// https://mvnrepository.com/artifact/org/jaudiotagger
//	implementation group: 'org', name: 'jaudiotagger', version: '2.0.3'
	implementation group: 'net.jthink', name: 'jaudiotagger', version: '3.0.1'
// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.16.0'




	// stomp web socket
	implementation("org.springframework.boot:spring-boot-starter-websocket")
	implementation("org.springframework:spring-messaging")

// для RSS
	implementation group: 'dev.stalla', name: 'stalla', version: '1.1.0'

// https://mvnrepository.com/artifact/com.rometools/rome
	implementation group: 'com.rometools', name: 'rome', version: '2.1.0'


//	compile 'org.springframework.boot:spring-context-support:6.1.3'
	implementation 'org.springframework:spring-context-support:6.1.3'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

//	implementation 'jakarta.mail:jakarta.mail-api:2.1.1'
	implementation 'com.google.code.gson:gson'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'

}

tasks.named('test') {
	useJUnitPlatform()
}
